# agent-redteam

./: .env.example  .gitignore  .gitleaks.toml  Agent Red Teaming Platform - Technical Design.md  Agent Red Teaming Platform.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
agent_redteam/: __init__.py
agent_redteam/adapters/: __init__.py  callable.py  canary_wrapper.py  http.py  langchain.py  llm.py  mcp_proxy.py  openai_agents.py
agent_redteam/attacks/: adaptive.py  executor.py  planner.py  registry.py
agent_redteam/core/: enums.py  errors.py  events.py  models.py  protocols.py
agent_redteam/detectors/: base.py  excessive_agency.py  exfiltration.py  injection_success.py  insecure_output.py  llm_judge.py  mcp_security.py  memory_poison.py  scope_violation.py  secret_access.py  tool_misuse.py  tool_normalizer.py
agent_redteam/environments/: __init__.py  builder.py  canary.py  runtime.py
agent_redteam/pytest_plugin/: plugin.py
agent_redteam/reporting/: behavioral.py  html.py  json_fmt.py  markdown.py  renderer.py  terminal.py
agent_redteam/runner/: budget.py  scanner.py
agent_redteam/scoring/: class_scorers.py  composite.py  engine.py  statistics.py
agent_redteam/taxonomy/: boundaries.py  vulns.py
docs/: architecture.md  attack-templates.md  configuration.md  getting-started.md  index.md  pytest-integration.md  scanning-agents.md  scanning-models.md  understanding-results.md  vulnerability-classes.md
docs/contributing/: adding-adapters.md  adding-detectors.md  adding-templates.md  index.md  project-structure.md
examples/: full_validation_scan.py  langchain_agent_scan.py  scan_with_real_llm.py  vllm_agent_scan.py
tests/adapters/: test_langchain_adapter.py  test_mcp_proxy_adapter.py  test_openai_agents_adapter.py
tests/attacks/: test_adaptive.py  test_planner.py  test_registry.py
tests/core/: test_enums.py  test_environment.py  test_models.py
(+105 files in other folders)
