[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-redteam"
version = "0.1.0"
description = "Open-source Python library for automated vulnerability assessment of LLM agents"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
keywords = ["llm", "security", "red-teaming", "vulnerability", "agents", "ai-safety"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "typing-extensions>=4.8",
]

[project.urls]
Homepage = "https://github.com/saichandrapandraju/agent-redteam"
Documentation = "https://saichandrapandraju.github.io/agent-redteam"
Repository = "https://github.com/saichandrapandraju/agent-redteam"
Issues = "https://github.com/saichandrapandraju/agent-redteam/issues"

[project.optional-dependencies]
http = ["httpx>=0.27"]
mcp = ["mcp>=1.0"]
rich = ["rich>=13.0"]
llm = ["litellm>=1.40"]
cli = ["typer>=0.12", "rich>=13.0"]
docs = [
    "mkdocs-material>=9.5",
    "mkdocs-mermaid2-plugin>=1.1",
]
all = ["agent-redteam[http,mcp,rich,llm,cli]"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.8",
    "ruff>=0.3",
    "coverage>=7.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "validation: ground-truth validation tests",
    "performance: performance benchmark tests",
]

[tool.mypy]
strict = true
python_version = "3.11"

[tool.ruff]
target-version = "py311"
line-length = 110

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]
